<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/txt_question"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question" >

        <RadioButton
            android:id="@+id/rd_ayam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ayam" />

        <RadioButton
            android:id="@+id/rd_sapi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_sapi" />

        <RadioButton
            android:id="@+id/rd_sayur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_sayuran" />

        <RadioButton
            android:id="@+id/rd_buah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_buah_buahan" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_submit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/rg_quiz"
        app:layout_constraintStart_toStartOf="@+id/rg_quiz"
        app:layout_constraintTop_toBottomOf="@+id/rg_quiz" />

</androidx.constraintlayout.widget.ConstraintLayout>